--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
     - name: Checkout torchnai
       uses: actions/checkout@v3
+      with:
         token: ${{ secrets.PAT }}
 
     - name: Set up Python ${{ matrix.python-version }}
