--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
     - name: Checkout torchani
       uses: actions/checkout@v3
+      with:
         token: ${{ secrets.PAT }}
 
     - name: Set up Python ${{ env.PY_VERSION }}
