--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install mypy
       run: pip install --upgrade mypy
 
+    - name: Remove mypy cache
+      run: rm -rf .mypy_cache
+
     - name: Type check with mypy
       run: mypy --install-types --non-interactive .
 
