--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -6,15 +6,14 @@ channels:
   - https://conda.anaconda.org/nvidia
 dependencies:
   # General
-  - python=3.8.1
+  - python=3.10
   - pip
   - typing_extensions>=4.0.0
 
   # Core
-  - numpy=1.22
-  - mkl=2024.0.0
-  - pytorch=1.13.1
-  - cudatoolkit=11.6
+  - numpy>=1.26
+  - pytorch=2.3
+  - pytorch-cuda=11.8
 
   # Data
   - h5py  # HDF5 backend
