--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,7 +22,7 @@ jobs:
             docker run
             --rm
             --gpus '"device=none"'
-            -v $PWD:/examples nvcr.io/nvidia/pytorch:22.08-py3
+            -v $PWD:/examples pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash
             -c
             "mkdir -p /torchani_sandbox
@@ -30,7 +30,6 @@ jobs:
             && cp -r /examples/. /torchani_sandbox/
             && pip install 'setuptools>=61' 'setuptools_scm>=8'
             && pip install -r tests_requirements.txt
-            && pip uninstall cudf -y
             && ./download.sh
             && pip install -e .
             && cd tests/
