--- a/environment.yaml
+++ b/environment.yaml
@@ -10,8 +10,9 @@ dependencies:
   - pip
   - typing_extensions>=4.0.0
 
+  # Required dependencies:
   # Core
-  - numpy>=1.26
+  - numpy>=1.24
   - pytorch=2.3
   - pytorch-cuda=11.8
 
@@ -22,9 +23,36 @@ dependencies:
   # Utils
   - tqdm  # progress bar
 
-  # Ase interface (optional)
-  - ase
-
   # Neurochem files (legacy)
   - lark-parser
   - requests
+
+  # Optional dependencies:
+  # Ase interface:
+  - ase
+
+  # Tests:
+  # Linters / checkers / tests-runners / CI
+  - black
+  - flake8
+  - mypy
+  - coverage
+  - pytest
+  - parameterized
+  # Indirect dependencies of torch.testing
+  - hypothesis
+  - expecttest
+  # Extra data backends for tests
+  - pandas  # csv support
+  - pyarrow  # Parquet backend
+  - zarr  # Zarr backend
+
+  # Tools:
+  - matplotlib
+  - pynvml
+
+  # Docs:
+  - sphinx
+  - sphinx_rtd_theme
+  - sphinx-gallery
+  - tensorboard
