Add comments about cuaev in environment

--- a/environment.yaml
+++ b/environment.yaml
@@ -16,6 +16,14 @@ dependencies:
   - pytorch=2.3
   - pytorch-cuda=11.8
 
+  # For building the extensions, the cuda libraries speciefied by the pytorch-cuda
+  # metapackage are not enough, so we use the nvidia::cuda-toolkit=11.8 metapackage
+  # to fetch missing libraries. The issue is that nvidia bundles nvcc-12.4, so we
+  # specifically override it with nvidia::cuda-nvcc-11.8, since pytorch errors out
+  # on 12.4
+  - nvidia::cuda-toolkit=11.8
+  - nvidia::cuda-nvcc=11.8
+
   # Data
   - h5py  # HDF5 backend
   - pyyaml  # builtin datasets specification
