--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,6 +22,7 @@ jobs:
             docker run
             --rm
             --gpus '"device=none"'
+            --ipc=host
             -v $PWD:/examples pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash
             -c
