--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -28,13 +28,11 @@ jobs:
             -c
             "mkdir -p /torchani_sandbox
             && cd /torchani_sandbox
-            && apt-get update
-            && apt-get install -y git wget unzip
             && cp -r /examples/. /torchani_sandbox/
-            && pip install --progress-bar off 'setuptools>=61' 'setuptools_scm>=8'
-            && pip install --progress-bar off -r tests_requirements.txt
+            && pip install 'setuptools>=61' 'setuptools_scm>=8'
+            && pip install -r tests_requirements.txt
             && ./download.sh
-            && pip install --progress-bar off -e .
+            && pip install -e .
             && cd tests/
             && pytest -s -v ."
 
