--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -67,7 +67,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: UnitTests
-        run: docker run --rm --gpus all ${{ steps.meta.outputs.tags }} bash -c "nvidia-smi && cd tests/ && pytest -s -v ."
+        run: docker run --privileged --rm --gpus all ${{ steps.meta.outputs.tags }} bash -c "nvidia-smi && cd tests/ && pytest -s -v ."
 
       - name: Remove image
         if: ${{ always() }}
