--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,25 +16,25 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           submodules: recursive
-
+      - name: Download test data
+        run: ./download.sh
       - name: Install and Run tests
         run: >-
             docker run
             --rm
             --gpus '"device=none"'
             --privileged
-            -v $PWD:/examples pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
+            -v $PWD:/torchani_sandbox pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash
             -c
-            "mkdir -p /torchani_sandbox
-            && cd /torchani_sandbox
-            && cp -r /examples/. /torchani_sandbox/
-            && pip install 'setuptools>=61' 'setuptools_scm>=8'
+            "pip install 'setuptools>=61' 'setuptools_scm>=8'
             && pip install -r tests_requirements.txt
-            && ./download.sh
             && pip install -e .
             && cd tests/
             && pytest -s -v ."
+            #"mkdir -p /torchani_sandbox
+            #&& cd /torchani_sandbox
+            #&& cp -r /examples/. /torchani_sandbox/
 
 concurrency:
   group: unittests-cpu-${{ github.event.pull_request.number || github.sha }}
