--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -27,7 +27,8 @@ jobs:
             -v $PWD:/torchani_sandbox pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash
             -c
-            "pip install 'setuptools>=61' 'setuptools_scm>=8'
+            "cd /torchani_sandbox
+            && pip install 'setuptools>=61' 'setuptools_scm>=8'
             && pip install -r tests_requirements.txt
             && pip install -e .
             && cd tests/
