--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -27,7 +27,7 @@ jobs:
             -v $PWD:/ani pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash -c
             "cd /ani
-            && pip install 'setuptools>=61' 'setuptools_scm>=8' -r test_requirements.txt
+            && pip install 'setuptools>=61' 'setuptools_scm>=8' -r ./test_requirements.txt
             && pip install -v --no-build-isolation --editable .
             && pytest ."
 
