Improve find command to avoid errors

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -43,7 +43,7 @@ jobs:
             bash -c
             'rm -rf /ani/torchani.egg-info
             && rm -rf /ani/.pytest_cache
-            && find . -name "__pycache__" -exec rm -rf "{}" \;'
+            && find . -name "__pycache__" -prune -exec rm -rf "{}" \;'
 
 concurrency:
   group: unittests-cpu-${{ github.event.pull_request.number || github.sha }}
