Change paths for building documentation

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,4 +33,4 @@ jobs:
       run: ./download.sh
 
     - name: Build docs
-      run: sphinx-build docs build
+      run: sphinx-build docs/src docs/build
