--- a/.gitignore
+++ b/.gitignore
@@ -38,19 +38,23 @@ htmlcov/
 Untitled.ipynb
 
 # Full directories relative to project root
-/download/
-/include/
 /tests/runs/
 /tools/plots/
 /tools/benchmark/
+# Data downloaded with download.sh
+/download/
+# Used for CUB when building CUDA / C++ extensions
+/include/
+# Build output of Sphinx docs
 /docs/build/
+# Build output of CUDA / C++ extensions
+/build/
 
 # Nvidia Nsight Systems profiling
 *.qdrep
 *.qdstrm
 
 *.prof
-/build*
 *checkpoint*
 /*.ipt
 /*.params
@@ -58,7 +62,6 @@ Untitled.ipynb
 /tmp
 datacache
 dist
-/nnp_training.py
 examples/dataset.pkl
 examples/batched_dataset_1x/*
 /tests/.hypothesis
