Only exclude copied examples

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ max-line-length = 88
 [mypy]
 ignore_missing_imports = True
 check_untyped_defs = True
-exclude = (tests/.*|tools/.*|torchani/data/.*|examples/.*)
+exclude = (tests/.*|tools/.*|torchani/data/.*|docs/src/examples/.*|docs/build/.*)
