--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -23,7 +23,6 @@ jobs:
             docker run
             --rm
             --gpus '"device=none"'
-            --privileged
             -v $PWD:/ani pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash -c
             "cd /ani
@@ -32,18 +31,18 @@ jobs:
             && cd ./tests
             && pytest -v ."
 
-      - name: Cleanup of all privileged-mode data
-        if: ${{ always() }}
-        continue-on-error: true
-        run: >-
-            docker run
-            --rm
-            --privileged
-            -v $PWD:/ani ubuntu:latest
-            bash -c
-            'rm -rf /ani/torchani.egg-info
-            && rm -rf /ani/.pytest_cache
-            && find . -name "__pycache__" -prune -exec rm -rf "{}" \;'
+      #- name: Cleanup of all privileged-mode data
+        #if: ${{ always() }}
+        #continue-on-error: true
+        #run: >-
+            #docker run
+            #--rm
+            #--privileged
+            #-v $PWD:/ani ubuntu:latest
+            #bash -c
+            #'rm -rf /ani/torchani.egg-info
+            #&& rm -rf /ani/.pytest_cache
+            #&& find . -name "__pycache__" -prune -exec rm -rf "{}" \;'
 
 concurrency:
   group: unittests-cpu-${{ github.event.pull_request.number || github.sha }}
