Rsync not present in container

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,7 +26,7 @@ jobs:
             -v $PWD:/ani pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
             bash -c
             "mkdir /ani-tmp
-            && rsync -aEPz /ani/ /ani-tmp/
+            && cp -r /ani/ /ani-tmp/
             && cd /ani-tmp
             && pip install 'setuptools>=61' 'setuptools_scm>=8' -r tests_requirements.txt
             && pip install --no-build-isolation --editable .
