--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,4 +1,4 @@
-name: build_docker
+name: unittests-ext
 
 on:
   pull_request:
@@ -25,7 +25,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build_docker_and_unittest:
+  cuda:
     runs-on: [self-hosted, ipickering]
     permissions:
       contents: read
@@ -38,7 +38,10 @@ jobs:
           token: ${{ secrets.PAT }}
           submodules: recursive
 
-      - name: Login to GitHub Container Registry
+      - name: Download tests data
+        run: ./download.sh
+
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -49,7 +52,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ github.job_id }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
@@ -59,15 +62,15 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: UnitTests
+      - name: Build extensions and run unit tests (gpu)
         run: >-
           docker run
           --rm
           --gpus all
           ${{ steps.meta.outputs.tags }}
           bash -c
-          "nvidia-smi
-          && pytest ."
+          'pip install -v --no-build-isolation --editable . --global-option="--ext"
+          && pytest .'
 
       - name: Remove image
         if: ${{ always() }}
@@ -75,5 +78,5 @@ jobs:
         run: docker image rm ${{ steps.meta.outputs.tags }}
 
 concurrency:
-  group: build_docker-${{ github.event.pull_request.number || github.sha }}
+  group: unittests-ext-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
