--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,25 +7,52 @@ on:
       - master
 
 env:
-  PY_VERSION: 3.8
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   docs:
     runs-on: [self-hosted, ipickering]
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-    - name: Checkout torchnai
-      uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.PAT }}
-    - name: Set up Python ${{ env.PY_VERSION }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PY_VERSION }}
-    - name: Install dependencies
-      run: pip install 'setuptools>=61' 'setuptools_scm>=8' -r docs_requirements.txt
-    - name: Install TorchANI
-      run: pip install --no-build-isolation --editable .
-    - name: Download data files
-      run: ./download.sh
-    - name: Build docs
-      run: sphinx-build docs/src docs/build
+      - name: Checkout torchani
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
+          submodules: recursive
+
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build docs
+        run: sphinx-build docs/src docs/build
+
+      - name: Remove image
+        if: ${{ always() }}
+        continue-on-error: true
+        run: docker image rm ${{ steps.meta.outputs.tags }}
+
+concurrency:
+  group: docs-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
