--- a/.github/workflows/unittests-ext.yml
+++ b/.github/workflows/unittests-ext.yml
@@ -7,7 +7,7 @@ on:
       - master
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: 'localhost:5000'
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -24,12 +24,12 @@ jobs:
           token: ${{ secrets.PAT }}
           submodules: recursive
 
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      #- name: Login to GHCR
+        #uses: docker/login-action@v2
+        #with:
+          #registry: ${{ env.REGISTRY }}
+          #username: ${{ github.actor }}
+          #password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
