--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -7,8 +7,8 @@ on:
       - master
 
 env:
-  REGISTRY: 'localhost:5000'
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: ${{ github.repository }}
+  IMAGE_NAME: 'unittests-ext'
 
 jobs:
   cpu-tests:
@@ -23,13 +23,6 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           submodules: recursive
-
-      #- name: Login to GHCR
-        #uses: docker/login-action@v2
-        #with:
-          #registry: ${{ env.REGISTRY }}
-          #username: ${{ github.actor }}
-          #password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
