Try to fix conda and fail

--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -7,32 +7,36 @@ source:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
-
-  host:
-    - python {{ python }}
-    - setuptools_scm
+    - python={{ environ.get('PYTHON_VERSION') }}
+    - pip
+    - git
     - cmake
     - ninja
-    - lark-parser
-    - h5py
-    - defaults::numpy >=1.18
-    {{ environ.get('CONDA_PYTORCH_CONSTRAINT') }}
-    {{ environ.get('CONDA_CUDATOOLKIT_CONSTRAINT') }}
+    - setuptools
+    - setuptools_scm
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - nvidia::cuda-toolkit={{ environ.get('CUDA_VERSION') }}
+    - nvidia::cuda-compiler={{ environ.get('CUDA_VERSION') }}
+    - pytorch::pytorch={{ environ.get('PYTORCH_VERSION') }}
+    - pytorch::pytorch-cuda={{ environ.get('CUDA_VERSION') }}
 
   run:
-    - python {{ python }}
-    - setuptools
+    - python={{ environ.get('PYTHON_VERSION') }}
+    - numpy >={{ environ.get('NUMPY_CONSTRAINT')}}
+    - typing_extensions>=4.0.0
     - lark-parser
     - h5py
-    - defaults::numpy >=1.18
-    {{ environ.get('CONDA_PYTORCH_CONSTRAINT') }}
-    {{ environ.get('CONDA_CUDATOOLKIT_CONSTRAINT') }}
+    - tqdm
+    - ase
+    - nvidia::cuda-toolkit={{ environ.get('CUDA_VERSION') }}
+    - nvidia::cuda-compiler={{ environ.get('CUDA_VERSION') }}
+    - pytorch::pytorch={{ environ.get('PYTORCH_VERSION') }}
+    - pytorch::pytorch-cuda={{ environ.get('CUDA_VERSION') }}
 
 build:
-  number: 1
-  string: py{{py}}_torch1.13.1_cuda11.6
+  number: 0
+  string: py{{ environ.get('PYTHON_VERSION') }}_torch{{ environ.get('PYTORCH_VERSION') }}_cuda{{ environ.get('CUDA_VERSION')}}
   script:
     - "{{ PYTHON }} -m pip install . --global-option='--ext-all-sms' -vvv --no-deps"
 
