--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -1,10 +1,7 @@
 FROM pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
+WORKDIR /torchani_sandbox
 
-# NGC image forces TF32, disable this
-# TODO: Do we need this for the pytorch images?
-ENV TORCH_ALLOW_TF32_CUBLAS_OVERRIDE=0
-
-# Set default shell to /bin/bash
+# Set default shell to /bin/bash (otherwise it is dash)
 SHELL ["/bin/bash", "-cu"]
 
 # Install packages to run download and to detect version using setuptools-scm
@@ -12,7 +9,6 @@ RUN apt-get update && apt-get install -y git wget unzip
 
 # Copy all repo files into the image
 COPY . /torchani_sandbox
-WORKDIR /torchani_sandbox
 
 # Build conda
 RUN ./conda/build_conda.sh
