--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,6 @@
 name: docs
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+on: pull_request
 
 env:
   REGISTRY: ${{ github.repository }}
