--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,20 @@
-[nosetests]
-verbosity=3
-detailed-errors=1
-with-coverage=1
-cover-package=torchani
-
 [tool:pytest]
 filterwarnings =
     ignore:.*distutils Version classes are deprecated.*:DeprecationWarning
+
 [flake8]
 # W503 is line-break-before-binary-operator which in PEP8 is the exact opposite
 # of what flake8 enforces
 ignore = W503
+max-line-length = 88
 # dump_dispersion constants only has data, its not necessary to lint it
 exclude =
     .git,
     __pycache__,
     build,
-    .eggs,
+    torchani.egg-info,
     docs/examples
     tools/dump_dispersion_constants.py
-max-line-length = 88
 
 [mypy]
 ignore_missing_imports = True
