--- a/environment.yaml
+++ b/environment.yaml
@@ -18,17 +18,14 @@ dependencies:
   - tqdm  # progress bar util
   - lark-parser  # legacy neurochem files
 
+  # Optional dependencies follow:
   # For building the extensions, the cuda libraries speciefied by the pytorch-cuda
-  # metapackage are not enough, so we use the nvidia::cuda-toolkit=11.8 metapackage
-  # to fetch missing libraries. The issue is that nvidia bundles nvcc-12.4, so we
-  # specifically override it with nvidia::cuda-nvcc-11.8, since pytorch errors out
-  # on 12.4
-  # TODO: Fix this
-  - nvidia::cuda-toolkit=11.8
+  # metapackage are not enough, we need the *-dev versions with the headers.
+  # We also need nvcc-11.8 to use as a compiler
+  - nvidia::cuda-libraries-dev=11.8
   - nvidia::cuda-nvcc=11.8
 
-  # Other optional dependencies follow:
-  # Ase interface, needed for dynamics and for tests/tools/docs:
+  # Optional ASE interface, needed for dynamics and for tests/tools/docs:
   - ase
 
   # Tests:
@@ -38,7 +35,6 @@ dependencies:
   - mypy  # type checking
   - pytest  # tests runner
   - parameterized  # parametrize test classes
-  - hypothesis  # indirect dependency of torch.testing
   - expecttest  # indirect dependency of torch.testing
   # Extra data backends for tests:
   - pandas  # Parquet backend
