Remove ase mention from extxyz file, and pynvml req from conda

--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -46,7 +46,7 @@ test:
     - download.sh
     - dataset/*
   commands:
-    - pip install pytest pynvml ase parameterized expecttest
+    - pip install pytest ase parameterized expecttest
     - ./download.sh
     # cuaev test
     - python tests/test_cuaev.py
