--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -56,7 +56,7 @@ jobs:
           --rm
           --gpus all
           ${{ steps.meta.outputs.tags }}
-          bash -c "python tools/training-benchmark.py dataset/ani1-up_to_gdb4/ani_gdb_s01.h5"
+          bash -c "python tools/training-benchmark.py"
 
       - name: Training benchmark (Nsight Systems)
         run: >-
@@ -64,7 +64,7 @@ jobs:
           --rm
           --gpus all
           ${{ steps.meta.outputs.tags }}
-          bash -c "python tools/training-benchmark-nsys-profile.py --dry-run dataset/ani1-up_to_gdb4/ani_gdb_s01.h5"
+          bash -c "python tools/training-benchmark.py --nvtx"
 
       - name: Remove image
         if: ${{ always() }}
