--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -42,13 +42,13 @@ jobs:
           ${{ steps.meta.outputs.tags }}
           bash -c "python tools/inference-benchmark.py"
 
-      - name: COMP6v1 benchmark
+      - name: COMP6v1 accuracy benchmark
         run: >-
           docker run
           --rm
           --gpus all
           ${{ steps.meta.outputs.tags }}
-          bash -c "python tools/comp6v1-benchmark.py"
+          bash -c "python tools/comp6v1-accuracy-benchmark.py"
 
       - name: Training benchmark
         run: >-
@@ -65,6 +65,22 @@ jobs:
           --gpus all
           ${{ steps.meta.outputs.tags }}
           bash -c "python tools/training-benchmark.py --nvtx"
+
+      - name: MD benchmark
+        run: >-
+          docker run
+          --rm
+          --gpus all
+          ${{ steps.meta.outputs.tags }}
+          bash -c "python tools/md-benchmark.py"
+
+      - name: MD benchmark (Nsight Systems)
+        run: >-
+          docker run
+          --rm
+          --gpus all
+          ${{ steps.meta.outputs.tags }}
+          bash -c "python tools/md-benchmark.py --nvtx"
 
       - name: Remove image
         if: ${{ always() }}
